[package]
name = "moonshine-tag"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Cheap, fast, mostly unique identifiers designed for Bevy"
categories = ["game-development"]
keywords = ["bevy"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_tag"
repository = "https://github.com/Zeenobit/moonshine_tag"

[dependencies]
once_cell = "1.20.*"
serde = { version = "1.0.*", features = ["derive"] }
const-fnv1a-hash = "1.1.*"
bevy_app = "0.16.*"
bevy_ecs = "0.16.*"
bevy_platform = "0.16.*"
bevy_reflect = "0.16.*"
bevy_utils = "0.16.*"

[dev-dependencies]
bevy = "0.16.*"
