[package]
name = "moonshine-tag"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Cheap, fast, mostly unique identifiers designed for Bevy"
categories = ["game-development"]
keywords = ["bevy"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_tag"
repository = "https://github.com/Zeenobit/moonshine_tag"

[dependencies]
base31 = "0.1"
inventory = "0.3"
itertools = "0.14"
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
ron = { version = "0.11", optional = true }
const-fnv1a-hash = "1.1"
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_platform = "0.17"
bevy_reflect = "0.17"
bevy_utils = "0.17"
moonshine-util = "0.4"

[dev-dependencies]
bevy = "0.17"

[features]
pretty-serde = ["ron"]
