[package]
name = "moonshine-tag"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Cheap, fast, mostly unique identifiers designed for Bevy"
categories = ["game-development"]
keywords = ["bevy"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_tag"
repository = "https://github.com/Zeenobit/moonshine_tag"

[dependencies]
base31 = "0.1"
inventory = "0.3"
itertools = "0.14"
once_cell = "1.21"
serde = { version = "1", features = ["derive"] }
ron = { version = "0.12", optional = true }
const-fnv1a-hash = "1.1"
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_platform = "0.18"
bevy_reflect = "0.18"
bevy_utils = "0.18"
moonshine-util = "0.4"

[dev-dependencies]
bevy = "0.18"

[features]
pretty-serde = ["ron"]
